# clutchfactor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_nflfastr_game_id.py  0003_backfill_nflfastr_game_id.py  0004_plays_posteam_abbr.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: admin.py  games.py  health.py  models.py  predictions.py  replay.py  router.py  stream.py
backend/app/db/: base.py  import_season.py  seed.py
backend/app/db/models/: __init__.py  game.py  model_version.py  odds_snapshot.py  play.py  play_raw.py  shap_value.py  snapshot.py  team.py  wp_prediction.py
backend/app/ml/: calibration.py  evaluate.py  features.py  registry.py  train.py
backend/app/providers/: base.py  developer_replay.py
backend/app/schemas/: analytics.py  game.py  model_version.py  play.py  prediction.py  shap.py  sse.py  team.py
backend/app/services/: analytics_service.py  game_service.py  prediction_service.py  replay_service.py  shap_service.py  sse_manager.py
backend/app/utils/: cache.py  time.py
backend/app/workers/: celery_app.py  tasks.py
backend/ml/artifacts/: xgb_20260219_010542.ubj
backend/scripts/: backfill_posteam_abbr.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
infra/redis/: redis.conf
(+45 files in other folders)
